--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-
+    <a href="/centent/Homepage.html">Homepage</a>
+    <a href="/centent/About-us.html">About-us</a>
+    <a href="/centent/Service.html">Service</a>
+    <a href="/centent/Centect.html">Contect</a>    
 </body>
 </html>
